[gd_scene load_steps=11 format=3 uid="uid://b6e2daejvjv0y"]

[ext_resource type="Script" path="res://Scripts/other/Level_Base.gd" id="1_c4rpu"]
[ext_resource type="PackedScene" uid="uid://cujkhawkt2egg" path="res://Scenes/player.tscn" id="3_j6x1p"]
[ext_resource type="Script" path="res://Scripts/other/PlayerCamera.gd" id="4_shjsq"]
[ext_resource type="PackedScene" uid="uid://dlh2vlug8qltd" path="res://Scenes/progress_bar.tscn" id="5_p8b2s"]
[ext_resource type="Script" path="res://Scripts/other/ProgressBar.gd" id="6_wptig"]
[ext_resource type="PackedScene" uid="uid://bcp0tupxne6ai" path="res://Scenes/Enemies/Squirrel.tscn" id="7_4c1f8"]
[ext_resource type="Texture2D" uid="uid://06x3cxd605xx" path="res://Visual/Sprites/gmtk_bg_big_street.png" id="7_q4pwo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rd2u5"]
bg_color = Color(0.207843, 0.729412, 0.952941, 1)

[sub_resource type="Theme" id="Theme_4tts6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ulv0b"]
size = Vector2(20, 20.2)

[node name="Game" type="Node2D" node_paths=PackedStringArray("grow_text", "gameover_text", "win_text")]
script = ExtResource("1_c4rpu")
grow_text = NodePath("CanvasLayer/GrowText")
gameover_text = NodePath("CanvasLayer/GameOverText")
win_text = NodePath("CanvasLayer/WinText")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_q4pwo")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_q4pwo")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Player_HPBar" parent="CanvasLayer" instance=ExtResource("5_p8b2s")]
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 20.0

[node name="Boss_HPBar" parent="CanvasLayer" instance=ExtResource("5_p8b2s")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 20.0
grow_horizontal = 0
maxHP = 500

[node name="GrowBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 27.0
offset_right = 309.0
offset_bottom = 37.0
theme_override_styles/fill = SubResource("StyleBoxFlat_rd2u5")
step = 1.0
value = 50.0
show_percentage = false
script = ExtResource("6_wptig")
maxHP = 50
isHealedOnHit = true

[node name="GrowText" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 11.0
offset_top = 37.0
offset_right = 315.0
offset_bottom = 60.0
size_flags_horizontal = 4
theme = SubResource("Theme_4tts6")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]G to [rainbow freq=1.0 sat=0.8 val=0.8][wave amp=50.0 freq=5.0 connected=1][pulse freq=1.0 color=#ffffff40 ease=-2.0]GROW"

[node name="GameOverText" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 12.0
offset_top = 54.0
offset_right = 312.0
offset_bottom = 127.0
size_flags_horizontal = 4
theme = SubResource("Theme_4tts6")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]GAME OVER[/center]"

[node name="WinText" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 12.0
offset_top = 54.0
offset_right = 312.0
offset_bottom = 127.0
size_flags_horizontal = 4
theme = SubResource("Theme_4tts6")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]YOU DEFEATED![/center]"

[node name="Walls" type="Node2D" parent="."]

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
position = Vector2(-1, 167)
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2(0, -0.5)
scale = Vector2(10, 5)
shape = SubResource("RectangleShape2D_ulv0b")

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2(201, -97)
scale = Vector2(0.240002, 8.92)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
scale = Vector2(10, 5)
shape = SubResource("RectangleShape2D_ulv0b")

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
position = Vector2(-201, -94)
scale = Vector2(0.240002, 8.92)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
scale = Vector2(10, 5)
shape = SubResource("RectangleShape2D_ulv0b")

[node name="Player" parent="." instance=ExtResource("3_j6x1p")]
position = Vector2(-100, 0)
jump_impulse = 600.0

[node name="State_Enemy" parent="." instance=ExtResource("7_4c1f8")]
position = Vector2(100, 0)
SPEED = 100

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)
script = ExtResource("4_shjsq")

[connection signal="BarEmpty" from="CanvasLayer/Player_HPBar" to="." method="_on_player_hp_bar_empty"]
[connection signal="BarEmpty" from="CanvasLayer/Boss_HPBar" to="." method="_on_boss_hp_bar_empty"]
[connection signal="BarFull" from="CanvasLayer/GrowBar" to="." method="_on_grow_bar_full"]
[connection signal="on_take_damage" from="Player" to="CanvasLayer/Player_HPBar" method="_on_damage_received"]
[connection signal="take_damage" from="State_Enemy" to="CanvasLayer/Boss_HPBar" method="_on_damage_received"]
[connection signal="take_damage" from="State_Enemy" to="CanvasLayer/GrowBar" method="_on_damage_received"]
